--- a/index.html
+++ b/index.html
@@ -8,9 +8,41 @@
     <title>Library</title>
 </head>
 <body>
-    
 
+<header>
+<div class="heading">
+    <h1 class="main-heading">Books n stuff</h1>
+</div>
+</header>
 
+<div class="main">
+    <div class="sidebar-left">
+        <div class="menu">
+       <button class="menu-button" id="new-book">New Book</button>
+       <button class="menu-button" id="remove-book">Remove Book</button>
+    </div>
+    </div>
+
+    <div class="book-cards">
+        <table class="book-table">
+            <tr>
+                <th>Author</th>
+                <th>Pages</th>
+                <th>Read it?</th>
+            </tr>
+            <tr>
+                <td>...</td>
+                <td>...</td>
+                <td>...</td>
+              </tr>
+        </table>
+    </div>
+
+</div>
+
+<footer>
+
+</footer>
 
 
 
