Adding "have you read it" works Boolean value added to object

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <input type="text" name="Author" id="Author" placeholder="Author name">
             <label for="Genre">Genre</label>
             <input type="text" name="Genre" id="Genre" placeholder="Genre">
+            <input type="checkbox" id="haveRead" name="haveRead">
+            <label for="checkbox">Have you read it?</label>
         </form>
         <div class="menu">
        <button class="menu-button" id="new-book">Add to library</button>
