--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="book-cards">
-        <table class="book-table">
+<!--         <table class="book-table">
             <tr>
                 <th>Author</th>
                 <th>Pages</th>
@@ -45,7 +45,7 @@
                 <td>...</td>
                 <td>...</td>
               </tr>
-        </table>
+        </table> -->
     </div>
 
 </div>
