Unique ID for new books, using crypto.randomUUID()

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <div class="main">
     <div class="menubar">
+        <!-- Add new books -->
         <form action="example.com/path" method="post" class="newbook">
             <label for="Book">Book</label>
             <input type="text" name="Book" id="Book" placeholder="Book name">
@@ -27,12 +28,14 @@
             <input type="checkbox" id="haveRead" name="haveRead">
             <label for="checkbox">Have you read it?</label>
         </form>
+        <!-- Buttons -->
         <div class="menu">
        <button class="menu-button" id="new-book">Add to library</button>
        <button class="menu-button" id="remove-book">Remove Book</button>
     </div>
     </div>
 
+    <!-- Main container for added books -->
     <div class="book-cards">
 
     </div>
