--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         </form>
         <!-- Buttons -->
         <div class="menu">
-       <button class="menu-button" id="new-book">Add to library</button>
-       <button class="menu-button" id="remove-book">Remove Book</button>
+       <button class="menu-button" id="new-book-button">Add to library</button>
+       <!-- <button class="menu-button" id="remove-book">Remove Book</button> -->
     </div>
     </div>
 
