--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
     <!-- Main container for added books -->
     <div class="book-cards">
-
+        <div class="book-card" id="cc2e6e4c-6120-45b2-bb39-e44c6fdaf162"><div class="book-card-left"><div class="authorname">Cormac McCarthy</div><h3 class="bookname">Blood Meridian or the Evening Redness in the West </h3><div class="genre">Epic</div></div><div class="book-card-right"><button id="cc2e6e4c-6120-45b2-bb39-e44c6fdaf162" class="btnHaveread">Read</button><button class="btnRemove" id="cc2e6e4c-6120-45b2-bb39-e44c6fdaf162">Remove book</button></div></div>
+        <div class="book-card" id="53feeb9f-b87c-43b4-b54d-51441e01f4f3"><div class="book-card-left"><div class="authorname">J.R.R. Tolkien</div><h3 class="bookname">The Hobbit</h3><div class="genre">Fantasy</div></div><div class="book-card-right"><button id="53feeb9f-b87c-43b4-b54d-51441e01f4f3" class="btnHaveread">Read</button><button class="btnRemove" id="53feeb9f-b87c-43b4-b54d-51441e01f4f3">Remove book</button></div></div>
     </div>
 
 </div>
